:pencil2: Sonarcloud issue 해결